--- a/src/css/navbars.css
+++ b/src/css/navbars.css
@@ -7,6 +7,7 @@
   overflow-x: hidden;
   flex-shrink: 0;
   flex-grow: 0;
+  z-index: 2;
   flex-direction: column;
   display: flex;
   transition: 100ms;
@@ -111,6 +112,7 @@
   width: 100vw;
   -webkit-app-region: drag;
   background-color: var(--bg2);
+  position: fixed;
   height: var(--menubarheight);
   display: flex;
   flex-wrap: nowrap;
