--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,9 +19,12 @@
   --bluetransparent: #4a73db1a;
   --red: #bf2d4b;
   --redtransparent: #bf2d4b1a;
-  --sidenavwidth: 180px;
-  --menubarheight: 32px;
-  --gutterwidth: 28px;
+  --sidenavwidth: 180px; /* width of sidenav */
+  --menubarheight: 32px; /* height of menubar */
+  --gutterwidth: 28px; /* width of file gutter (column with block menu button) */
+  --maxfilecontentwidth: 800px; /* max width of file content (doesn't include the gutter) */
+  --filecontentmargintop: 3vw; /* margin top of the file content */
+  --filecontentmargin: 64px; /* margin between file content and sidenav & edge of window*/
 }
 
 #lockedfile {
