--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -5,12 +5,26 @@
   flex-grow: 1;
   font-weight: bold;
   width: 100%;
+  margin-bottom: -8px;
+}
+
+.subtitle {
+  color: var(--headingblocktextcolor);
+  font-size: 20px;
+  letter-spacing: 0.015em;
+  flex-grow: 1;
+  font-weight: bold;
+  width: 100%;
+  margin-top: 32px;
+  margin-bottom: -8px;
 }
 
 #settings {
   padding-left: calc(var(--gutterwidth) + 8px);
   display: none;
   flex-wrap: wrap;
+  padding-bottom: 32px;
+  flex-direction: column;
   width: 100%;
 }
 
@@ -19,34 +33,75 @@
   border-radius: 8px;
   margin-top: 16px;
   transition: 100ms;
+  display: flex;
+  gap: 8px;
   padding: 16px 16px;
   flex-grow: 1;
+}
+
+.settingsdiv p {
+  color: var(--textblocktextcolor);
+}
+
+.settingsdiv.column {
+  flex-direction: column;
 }
 
 .settingsdiv .head {
   color: var(--headingblocktextcolor);
   font-size: 18px;
+  width: auto;
   letter-spacing: 0.01em;
 }
 
 .settingsdiv .settingsoption {
   width: 100%;
-transition: 100ms;
-    border-radius: 6px;
+  transition: 100ms;
+  border-radius: 6px;
   background-color: var(--bg3);
   padding: 8px 16px 8px 32px;
+  display: block;
+  flex-grow: 1;
   color: var(--settingstextcolor);
   background-position: 8px center;
   background-size: 16px 16px;
-  margin-top: 8px;
   border: 2px solid transparent;
 }
 
 .settingsdiv .settingsoption:hover {
   border: 2px solid var(--bg1);
-
 }
 
 .settingsdiv .settingsoption.active {
   border: 2px solid var(--green);
+}
+
+.settingsdiv .settingsbtn {
+  transition: 100ms;
+  border-radius: 6px;
+  background-color: var(--bg3);
+  margin-left: auto;
+  flex-grow: 0;
+  padding: 16px 24px 16px 24px;
+  color: var(--settingstextcolor);
+  background-position: center center;
+  float: right;
+  background-size: 24px 24px;
+  border: 2px solid transparent;
+}
+
+.settingsdiv .settingsbtn:hover {
+  border: 2px solid var(--bg1);
+}
+[theme="light"] #openresources {
+  background-image: url("../../assets/icons/settings/folder_l.svg");
+}
+
+[theme="dark"] #openresources {
+  background-image: url("../../assets/icons/settings/folder_d.svg");
+}
+
+
+#filetreeindentslider {
+  margin-left: auto;
 }
