--- a/src/css/navbars.css
+++ b/src/css/navbars.css
@@ -218,7 +218,13 @@
 #menubar #winbtns {
   display: none;
   margin-right: 6px;
+  margin-left: 8px;
 }
+
+#menubar #winbtns button {
+  background-size: 16px;
+}
+
 
 #menubar #fileactions {
   margin-left: auto;
